# x-terminate

./: README.md  package.json  pnpm-lock.yaml
chrome-extension/: manifest.ts
chrome-extension/src/background/: index.ts
pages/: types.ts
pages/content/: vite.config.mts
pages/content-runtime/: vite.config.mts
pages/content-ui/: package.json  vite.config.mts
pages/content-ui/src/: App.tsx  political_tweet_classifier.json
pages/popup/src/: Popup.tsx  index.css
tests/e2e/: package.json
train-model/: .gitignore  Cargo.toml
train-model/data/: tweets.jsonl
train-model/src/: main.rs
train-model/train/: readme.md  requirements.txt  train.py
