[package]
name = "train-model"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
schemars = "1.0.0-alpha.17"
tysm = "0.7.0-alpha.1"
serde_json = "1.0.140"
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
